requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janus"
version = "0.2.0"
description = "A CLI tool for securely managing your passwords with a local encrypted file."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=44.0.2",
    "pyperclip>=1.9.0",
    "typer>=0.15.2",
]

[project.scripts]
janus = "janus.main:app"